Fix card overflow when its title is too long

--- a/src/components/todoCard/todo-card.css
+++ b/src/components/todoCard/todo-card.css
@@ -73,6 +73,8 @@
 }
 
 input[type="checkbox"] {
+  flex-shrink: 0;
+
   appearance: none;
   width: 1em;
   height: 1em;
