--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,9 @@ hr {
 .title {
   font-weight: bold;
   color: var(--secondary-text);
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .row {
